--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Day 2 takehome</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+    <div class="col-md-8 col-md-offset-2 container-fluid" id="container-bg">
+      <div class="row height">
+        <h3>[container-fluid]</h3>
+      </div>
+        <div class="col-md-12 header">
+          <h3>Header</h3>
+        </div>
+      <div class="col-md-12 nav">
+        <h3>Nav</h3>
+      </div>
+      <div class="col-md-9 content">
+        <h3>content</h3>
+      </div>
+      <div class="col-md-3 aside">
+        <h3>aside</h3>
+      </div>
+      <div class="col-md-3 promo">
+        <h3>Promo 1</h3>
+      </div>
+      <div class="col-md-3 promo">
+        <h3>promo 2</h3>
+      </div>
+      <div class="col-md-3 promo">
+        <h3>promo 3</h3>
+      </div>
+      <div class="col-md-3 promo">
+        <h3>promo 4</h3>
+      </div>
+      <div class="col-md-12 footer">
+        <h3>footer</h3>
+      </div>
+    </div>
 </body>
 </html>
